--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,6 +1,7 @@
 [[language]]
 name = "rust"
-formatter = { command = "cargo", args = ["+nightly", "fmt"] }
+# doesn't work, because cargo fmt doesn't support stdin formatting
+# formatter = { command = "cargo", args = ["+nightly", "fmt"] }
 
 [language-server.rust-analyzer.config.check]
 command = "clippy"
